add the support of HMAC as signer